src/pages/home/home.module.scss
@import '../../utils/globals.scss';

$breakpointOne: 800;

$whatWeDoBreakpoint: 972;
$howWeDoItBreakpoint: 720;

$whatWeHaveDoneBreakpoint: 800;

.hero {
    display: flex;

    .left {
        flex: 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        margin: #{$margin * 2}px;

        .callout {
            position: relative;

            .heading {
                margin-bottom: #{$margin}px;
                text-align: center;
                font-size: 3em;
            }

            .content {
                margin-bottom: #{$margin * 4}px;
                max-width: 400px;
                text-align: center;
                font-size: large;
            }

            .actions {
                max-width: 400px;
                display: flex;
                justify-content: flex-end;
            }
        }

        
    }

    .right {
        flex: 1;
        position: relative;
        margin: #{$margin * 2}px;

        img {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            object-fit: contain;
        }
    }
}

.card-container {
    display: flex;
    align-items: center;
    min-height: 70vh;

    .cards {
        display: grid;
        flex: 1;
        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
        padding: #{$padding * 2}px;
        grid-gap: #{$padding * 2}px;

        .second {
            transform: translateY(-25px);
        }
    }
    
}

.howWeDoIt {
    position: relative;
    display: flex;
    flex-direction: column;

    .row {
        display: flex;
        justify-content: space-around;
        align-items: center;

        .item {
            position: relative;
            height: 300px;
            width: 300px;
            margin: #{$margin * 2}px;

            &:before {
                content: attr(count);
                position: absolute;
                top: 0px;
                left: 0px;
                height: 50px;
                width: 50px;
                font-size: 1.5em;
                background-color: $primary;
                border-radius: 50%;
                z-index: 10;
                display: flex;
                justify-content: center;
                align-items: center;
                color: $light;
            }

            img {
                position: absolute;
                top: 0px;
                left: 0px;
                width: 100%;
                height: 100%;
                object-fit: contain;
            }
        }
    }
}

.whatWeHaveDone {
    display: flex;
    flex: 1;

    .left {
        flex: 3;
        position: relative;
        margin: #{$margin * 2}px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;

        .header {
            color: $light;
            margin-bottom: #{$margin * 2}px;
        }

        .content {
            max-width: 450px;
            text-align: center;
            color: $light;
            margin-bottom: #{$margin * 4}px;
        }

        .controls {
            display: flex;
            align-items: center;
            max-width: 450px;
            min-width: 300px;

            .left-control {
                transform: rotate(180deg);
            }

            .left-control, .right-control {
                color: $light;

                * {
                    font-size: 50px;
                    cursor: pointer;
                }
            }

            .center {
                flex: 1;
                display: flex;
                align-items: center;

                .line {
                    flex: 1;
                    height: 5px;
                    background-color: $light;
                    position: relative;

                    img {
                        position: absolute;
                        top: -8px;
                        left: 50%;
                        height: 200px;
                        width: auto;
                        transform: translateX(-50%);
                    }
                }

                .circle {
                    height: 10px;
                    width: 10px;
                    border-radius: 50%;
                    background-color: $light;
                }
            }
        }
        

        img {
            position: absolute;
            top: 0px;
            height: auto;
            max-width: 700px;
            object-fit: cover;
            z-index: -1;
        }
    }

    .right {
        flex: 2;
        display: flex;
        justify-content: center;
        align-items: center;
        margin: #{$margin * 2}px;

        .card-container {
            flex: 1;
            display: flex;
            position: relative;

            .card {
                flex: 1;
            }
        }
    }
}

@media screen and (orientation: portrait) {
    .hero {
        flex-direction: column-reverse;

        .right {
            min-height: 45vh;
        }
    }
}

@media screen and (max-width: #{$whatWeDoBreakpoint}px) {
    .card-container .cards .second {
        transform: translateY(0px);
    }
}

@media screen and (max-width: #{$howWeDoItBreakpoint}px) {
    .howWeDoIt .row {
        flex-direction: column;
    }
}

@media screen and (max-width: #{$whatWeHaveDoneBreakpoint}px) {
    .whatWeHaveDone {
        flex-direction: column-reverse;

        .left {
            min-height: 500px;
        }
    }
}

